--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Peter Dzurus",
   "license": "ISC",
   "dependencies": {
+    "airtable": "^0.5.10",
     "express": "^4.16.4"
   }
 }
