--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "airtable": "^0.5.10",
-    "express": "^4.16.4"
+    "body-parser": "^1.19.0",
+    "express": "^4.16.4",
+    "loadash": "^1.0.0",
+    "lodash": "^4.17.11"
   }
 }
